LSM Vector updates and fixes (#2831)
(cherry picked from commit 18ec4af9faf5b7716f7d5ca10f3538b63da31b8b)