@@ -57,6 +57,7 @@ if [ -z "$JAVA_OPTS_SCRIPT" ] ; then
         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED \
         --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED \
         --add-opens java.base/java.lang=ALL-UNNAMED \
+        --add-modules jdk.incubator.vector \
         -Dpolyglot.engine.WarnInterpreterOnly=false \
         -Djava.awt.headless=true -Dfile.encoding=UTF8 \
         -Djava.util.logging.config.file=config/arcadedb-log.properties"
